odnosnik right i forward